ch(FreeresumeAnalysis): make ai generic