@@ -27,11 +27,12 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
-@Service("freeResumeAnalysisService")
+@Service("genericResumeAnalysisService")
 @RequiredArgsConstructor
 @Slf4j
-@ConditionalOnProperty(name = "app.resume-analysis.provider", havingValue = "ollama", matchIfMissing = true)
+@ConditionalOnProperty(name = "app.resume-analysis.provider", havingValue = "generic", matchIfMissing = true)
 public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
 
     private final ApplicationRepository applicationRepository;
@@ -39,11 +40,42 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
     private final RestTemplate restTemplate = new RestTemplate();
     private final Tika tika = new Tika();
 
-    @Value("${ollama.base-url:http://localhost:11434}")
-    private String ollamaBaseUrl;
+    // Generic AI Service Configuration
+    @Value("${ai.service.provider:ollama}")
+    private String aiProvider;
 
-    @Value("${ollama.model:llama3}")
-    private String ollamaModel;
+    @Value("${ai.service.base-url:http://localhost:11434}")
+    private String aiBaseUrl;
+
+    @Value("${ai.service.model:llama3}")
+    private String aiModel;
+
+    @Value("${ai.service.api-key:}")
+    private String apiKey;
+
+    @Value("${ai.service.auth-type:none}")
+    private String authType; // none, bearer, api-key, custom
+
+    @Value("${ai.service.auth-header:Authorization}")
+    private String authHeader;
+
+    @Value("${ai.service.generation-endpoint:/api/generate}")
+    private String generationEndpoint;
+
+    @Value("${ai.service.health-endpoint:/api/tags}")
+    private String healthEndpoint;
+
+    @Value("${ai.service.request-format:ollama}")
+    private String requestFormat; // ollama, openai, claude, generic
+
+    @Value("${ai.service.response-field:response}")
+    private String responseField; // Field name in response containing the text
+
+    @Value("${ai.service.max-tokens:1000}")
+    private Integer maxTokens;
+
+    @Value("${ai.service.temperature:0.1}")
+    private Double temperature;
 
     @Value("${app.uploads.directory:uploads}")
     private String uploadsDirectory;
@@ -58,14 +90,14 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
 
     @Override
     public ResumeAnalysisDTO analyzeResume(MultipartFile resumeFile, Job job) {
-        log.info("Starting FREE resume analysis for job: {}", job.getTitle());
+        log.info("Starting resume analysis using {} provider for job: {}", aiProvider, job.getTitle());
         
         try {
             // Extract text from the resume file
             String resumeText = extractTextFromResume(resumeFile);
             
-            // Perform AI analysis using free Ollama
-            return performFreeAiAnalysis(resumeText, job);
+            // Perform AI analysis using configured provider
+            return performGenericAiAnalysis(resumeText, job);
             
         } catch (Exception e) {
             log.error("Error analyzing resume: {}", e.getMessage(), e);
@@ -75,7 +107,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
 
     @Override
     public ResumeAnalysisDTO analyzeResume(String resumeFilePath, Job job) {
-        log.info("Starting resume analysis from file path: {}", resumeFilePath);
+        log.info("Starting resume analysis from file path: {} using provider: {}", resumeFilePath, aiProvider);
         
         try {
             // Extract filename from URL if it's a full URL path
@@ -90,7 +122,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
             String resumeText = tika.parseToString(resumeFile);
             
             // Perform AI analysis
-            return performFreeAiAnalysis(resumeText, job);
+            return performGenericAiAnalysis(resumeText, job);
             
         } catch (Exception e) {
             log.error("Error analyzing resume from path {}: {}", resumeFilePath, e.getMessage(), e);
@@ -175,56 +207,185 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
         }
     }
 
-    // Private helper methods for FREE AI analysis
+    // Generic AI analysis methods
 
-    private ResumeAnalysisDTO performFreeAiAnalysis(String resumeText, Job job) {
+    private ResumeAnalysisDTO performGenericAiAnalysis(String resumeText, Job job) {
         long startTime = System.currentTimeMillis();
         
         try {
-            // Check if Ollama is available, fallback to traditional NLP if not
-            if (isOllamaAvailable()) {
-                return performOllamaAnalysis(resumeText, job, startTime);
+            // Check if AI service is available, fallback to traditional NLP if not
+            if (isAiServiceAvailable()) {
+                return performAiAnalysis(resumeText, job, startTime);
             } else {
-                log.warn("Ollama not available, using traditional NLP analysis");
+                log.warn("{} AI service not available, using traditional NLP analysis", aiProvider);
                 return performTraditionalNlpAnalysis(resumeText, job, startTime);
             }
             
         } catch (Exception e) {
-            log.error("Error in FREE AI analysis, falling back to traditional NLP: {}", e.getMessage());
+            log.error("Error in {} AI analysis, falling back to traditional NLP: {}", aiProvider, e.getMessage());
             return performTraditionalNlpAnalysis(resumeText, job, startTime);
         }
     }
 
-    private ResumeAnalysisDTO performOllamaAnalysis(String resumeText, Job job, long startTime) {
+    private ResumeAnalysisDTO performAiAnalysis(String resumeText, Job job, long startTime) {
         try {
             // Create analysis prompt
-            String prompt = createFreeAnalysisPrompt(resumeText, job.getDescription());
+            String prompt = createAnalysisPrompt(resumeText, job.getDescription());
             
-            // Call Ollama API
-            String response = callOllamaApi(prompt);
+            // Call AI service
+            String response = callGenericAiApi(prompt);
             
             // Parse response
-            ResumeAnalysisDTO analysis = parseFreeAiResponse(response);
-            
-            // Add metadata
-            long processingTime = System.currentTimeMillis() - startTime;
-            analysis.setAnalysisMetadata(createFreeMetadata(processingTime, "ollama-" + ollamaModel));
+            ResumeAnalysisDTO analysis = parseAiResponse(response);
             
             // Calculate job-specific scoring
             ResumeAnalysisDTO.ResumeScoreDTO score = calculateJobMatchScore(analysis, job);
             analysis.setResumeScore(score);
             
-            log.info("FREE Ollama resume analysis completed in {} ms", processingTime);
+            // Add metadata
+            long processingTime = System.currentTimeMillis() - startTime;
+            ResumeAnalysisDTO.AnalysisMetadataDTO metadata = createMetadata(processingTime, aiProvider + "/" + aiModel);
+            analysis.setAnalysisMetadata(metadata);
+            
+            log.info("AI analysis completed using {} in {}ms", aiProvider, processingTime);
             return analysis;
             
         } catch (Exception e) {
-            log.error("Ollama analysis failed: {}", e.getMessage());
-            throw new RuntimeException("Ollama analysis failed", e);
+            log.error("AI analysis failed: {}", e.getMessage());
+            throw e;
         }
     }
 
+    private boolean isAiServiceAvailable() {
+        try {
+            String url = aiBaseUrl + healthEndpoint;
+            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
+            return response.getStatusCode() == HttpStatus.OK;
+        } catch (Exception e) {
+            log.debug("{} AI service not available: {}", aiProvider, e.getMessage());
+            return false;
+        }
+    }
+
+    private String callGenericAiApi(String prompt) {
+        String url = aiBaseUrl + generationEndpoint;
+        
+        // Create request based on format
+        Map<String, Object> request = createRequestPayload(prompt);
+        
+        // Create headers with authentication
+        HttpHeaders headers = createHttpHeaders();
+        
+        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(request, headers);
+        
+        try {
+            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
+            Map<String, Object> responseBody = response.getBody();
+            return extractResponseText(responseBody);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to call " + aiProvider + " API: " + e.getMessage(), e);
+        }
+    }
+
+    private Map<String, Object> createRequestPayload(String prompt) {
+        Map<String, Object> request = new HashMap<>();
+        
+        switch (requestFormat.toLowerCase()) {
+            case "openai":
+                request.put("model", aiModel);
+                request.put("messages", List.of(Map.of("role", "user", "content", prompt)));
+                request.put("temperature", temperature);
+                request.put("max_tokens", maxTokens);
+                break;
+                
+            case "claude":
+                request.put("model", aiModel);
+                request.put("messages", List.of(Map.of("role", "user", "content", prompt)));
+                request.put("temperature", temperature);
+                request.put("max_tokens", maxTokens);
+                break;
+                
+            case "ollama":
+            default:
+                request.put("model", aiModel);
+                request.put("prompt", prompt);
+                request.put("stream", false);
+                request.put("options", Map.of("temperature", temperature, "num_predict", maxTokens));
+                break;
+        }
+        
+        return request;
+    }
+
+    private HttpHeaders createHttpHeaders() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        
+        // Add authentication based on auth type
+        switch (authType.toLowerCase()) {
+            case "bearer":
+                if (!apiKey.isEmpty()) {
+                    headers.setBearerAuth(apiKey);
+                }
+                break;
+                
+            case "api-key":
+                if (!apiKey.isEmpty()) {
+                    headers.set(authHeader, apiKey);
+                }
+                break;
+                
+            case "custom":
+                if (!apiKey.isEmpty()) {
+                    headers.set(authHeader, apiKey);
+                }
+                break;
+                
+            case "none":
+            default:
+                // No authentication
+                break;
+        }
+        
+        return headers;
+    }
+
+    private String extractResponseText(Map<String, Object> responseBody) {
+        try {
+            switch (requestFormat.toLowerCase()) {
+                case "openai":
+                    List<Map<String, Object>> choices = (List<Map<String, Object>>) responseBody.get("choices");
+                    if (choices != null && !choices.isEmpty()) {
+                        Map<String, Object> message = (Map<String, Object>) choices.get(0).get("message");
+                        return (String) message.get("content");
+                    }
+                    break;
+                    
+                case "claude":
+                    // Claude typically has a 'content' field in the response
+                    Object content = responseBody.get("content");
+                    if (content instanceof List) {
+                        List<Map<String, Object>> contentList = (List<Map<String, Object>>) content;
+                        if (!contentList.isEmpty()) {
+                            return (String) contentList.get(0).get("text");
+                        }
+                    }
+                    break;
+                    
+                case "ollama":
+                default:
+                    return (String) responseBody.get(responseField);
+            }
+        } catch (Exception e) {
+            log.error("Error extracting response text: {}", e.getMessage());
+        }
+        
+        // Fallback: try the configured response field
+        return (String) responseBody.get(responseField);
+    }
+
     private ResumeAnalysisDTO performTraditionalNlpAnalysis(String resumeText, Job job, long startTime) {
-        log.info("Performing traditional NLP analysis (100% free)");
+        log.info("Performing traditional NLP analysis (100% free fallback)");
         
         try {
             // Extract information using traditional NLP techniques
@@ -240,7 +401,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
             
             // Add metadata
             long processingTime = System.currentTimeMillis() - startTime;
-            analysis.setAnalysisMetadata(createFreeMetadata(processingTime, "traditional-nlp"));
+            analysis.setAnalysisMetadata(createMetadata(processingTime, "traditional-nlp"));
             
             // Calculate job-specific scoring
             ResumeAnalysisDTO.ResumeScoreDTO score = calculateJobMatchScore(analysis, job);
@@ -255,42 +416,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
         }
     }
 
-    private boolean isOllamaAvailable() {
-        try {
-            String url = ollamaBaseUrl + "/api/tags";
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            return response.getStatusCode() == HttpStatus.OK;
-        } catch (Exception e) {
-            log.debug("Ollama not available: {}", e.getMessage());
-            return false;
-        }
-    }
-
-    private String callOllamaApi(String prompt) {
-        String url = ollamaBaseUrl + "/api/generate";
-        
-        Map<String, Object> request = Map.of(
-                "model", ollamaModel,
-                "prompt", prompt,
-                "stream", false,
-                "options", Map.of("temperature", 0.1, "num_predict", 1000)
-        );
-        
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(request, headers);
-        
-        try {
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-            Map<String, Object> responseBody = response.getBody();
-            return (String) responseBody.get("response");
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to call Ollama API: " + e.getMessage(), e);
-        }
-    }
-
-    private String createFreeAnalysisPrompt(String resumeText, String jobDescription) {
+    private String createAnalysisPrompt(String resumeText, String jobDescription) {
         return String.format("""
             Analyze this resume and extract structured information. Respond ONLY with valid JSON:
             
@@ -315,7 +441,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
                 jobDescription.substring(0, Math.min(jobDescription.length(), 500)));
     }
 
-    private ResumeAnalysisDTO parseFreeAiResponse(String response) {
+    private ResumeAnalysisDTO parseAiResponse(String response) {
         try {
             // Clean the response
             String cleanResponse = response.trim();
@@ -331,7 +457,7 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
             return objectMapper.readValue(cleanResponse, ResumeAnalysisDTO.class);
             
         } catch (Exception e) {
-            log.error("Error parsing free AI response: {}", e.getMessage());
+            log.error("Error parsing {} AI response: {}", aiProvider, e.getMessage());
             // Return basic analysis on parse error
             return ResumeAnalysisDTO.builder()
                     .totalExperienceYears(BigDecimal.valueOf(2))
@@ -447,8 +573,8 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
                         .company("Previous Company")
                         .position("Software Developer")
                         .durationMonths(24)
-                        .startDate("2020-01")
-                        .endDate("2022-01")
+                        .startDate("2022-01")
+                        .endDate("2024-01")
                         .responsibilities(Arrays.asList("Software development", "Code review"))
                         .build()
         );
@@ -456,125 +582,125 @@ public class FreeResumeAnalysisServiceImpl implements ResumeAnalysisService {
 
     // Helper methods
     
-    private ResumeAnalysisDTO.AnalysisMetadataDTO createFreeMetadata(long processingTime, String model) {
+    private ResumeAnalysisDTO.AnalysisMetadataDTO createMetadata(long processingTime, String model) {
         return ResumeAnalysisDTO.AnalysisMetadataDTO.builder()
                 .processedAt(LocalDateTime.now())
                 .aiModelUsed(model)
-                .confidenceScore(BigDecimal.valueOf(0.75)) // Lower confidence for free analysis
+                .confidenceScore(BigDecimal.valueOf(0.85))
                 .processingTimeMs(processingTime)
-                .processingNotes(Arrays.asList("FREE analysis completed"))
+                .processingNotes(new ArrayList<>())
                 .build();
     }
 
     private ResumeAnalysisDTO.ResumeScoreDTO calculateJobMatchScore(ResumeAnalysisDTO analysis, Job job) {
         try {
-            // Calculate skill match ratio
+            // Extract required skills from job description
             List<String> requiredSkills = extractRequiredSkills(job.getDescription());
-            List<String> candidateSkills = analysis.getSkillsExtracted();
-            BigDecimal skillsMatch = calculateSkillsMatchRatio(requiredSkills, candidateSkills);
+            List<String> candidateSkills = analysis.getSkillsExtracted() != null ? 
+                analysis.getSkillsExtracted() : new ArrayList<>();
             
-            // Calculate experience match
+            // Calculate various scoring metrics
+            BigDecimal skillsMatchRatio = calculateSkillsMatchRatio(requiredSkills, candidateSkills);
             BigDecimal experienceMatch = calculateExperienceMatch(analysis.getTotalExperienceYears(), job);
             
-            // Calculate overall scores
-            int skillsScore = (int) (skillsMatch.doubleValue() * 100);
+            // Calculate scores (0-100)
+            int skillsScore = (int) (skillsMatchRatio.doubleValue() * 100);
             int experienceScore = (int) (experienceMatch.doubleValue() * 100);
-            int overallScore = (skillsScore + experienceScore) / 2;
-            
-            // Create scoring criteria
-            ResumeAnalysisDTO.ScoringCriteriaDTO criteria = ResumeAnalysisDTO.ScoringCriteriaDTO.builder()
-                    .requiredSkillsMatch(skillsMatch)
-                    .experienceLevelMatch(experienceMatch)
-                    .industryRelevance(BigDecimal.valueOf(0.75))
-                    .educationLevelMatch(BigDecimal.valueOf(0.80))
-                    .build();
+            int overallScore = (int) ((skillsScore * 0.4) + (experienceScore * 0.6));
             
             return ResumeAnalysisDTO.ResumeScoreDTO.builder()
                     .overallScore(overallScore)
-                    .jobMatchScore(overallScore)
+                    .jobMatchScore((int) ((skillsScore + experienceScore) / 2.0))
                     .experienceScore(experienceScore)
                     .skillsMatchScore(skillsScore)
-                    .scoringCriteria(criteria)
+                    .scoringCriteria(ResumeAnalysisDTO.ScoringCriteriaDTO.builder()
+                            .requiredSkillsMatch(skillsMatchRatio)
+                            .experienceLevelMatch(experienceMatch)
+                            .industryRelevance(BigDecimal.valueOf(0.75))
+                            .educationLevelMatch(BigDecimal.valueOf(0.80))
+                            .build())
                     .build();
                     
         } catch (Exception e) {
-            log.error("Error calculating job match score: {}", e.getMessage(), e);
+            log.error("Error calculating job match score: {}", e.getMessage());
             return createDefaultScoring();
         }
     }
 
     private List<String> extractRequiredSkills(String jobDescription) {
-        String lowerDescription = jobDescription.toLowerCase();
-        return Arrays.asList(
-                "java", "spring", "react", "javascript", "python", "sql", 
-                "aws", "docker", "kubernetes", "git", "postgresql", "mysql",
-                "angular", "vue", "node.js", "typescript", "mongodb"
-        ).stream()
-                .filter(lowerDescription::contains)
-                .toList();
+        // Simple skill extraction from job description
+        List<String> commonSkills = Arrays.asList(
+                "Java", "Python", "JavaScript", "React", "Angular", "Spring", "Node.js", "SQL", "AWS", "Docker"
+        );
+        
+        return commonSkills.stream()
+                .filter(skill -> jobDescription.toLowerCase().contains(skill.toLowerCase()))
+                .collect(Collectors.toList());
     }
 
     private BigDecimal calculateSkillsMatchRatio(List<String> requiredSkills, List<String> candidateSkills) {
         if (requiredSkills.isEmpty()) {
-            return BigDecimal.valueOf(0.5);
+            return BigDecimal.valueOf(0.8); // Default if no specific skills required
         }
         
-        long matchCount = requiredSkills.stream()
+        long matchingSkills = requiredSkills.stream()
                 .mapToLong(required -> candidateSkills.stream()
                         .anyMatch(candidate -> candidate.toLowerCase().contains(required.toLowerCase())) ? 1 : 0)
                 .sum();
-        
-        return BigDecimal.valueOf((double) matchCount / requiredSkills.size());
+                
+        return BigDecimal.valueOf((double) matchingSkills / requiredSkills.size());
     }
 
     private BigDecimal calculateExperienceMatch(BigDecimal totalExperience, Job job) {
+        // Simple experience matching logic
         if (totalExperience == null) {
             return BigDecimal.valueOf(0.5);
         }
         
-        if (totalExperience.compareTo(BigDecimal.valueOf(3)) >= 0) {
+        double experienceYears = totalExperience.doubleValue();
+        
+        // Assume job requires 2-5 years experience (could be extracted from job description)
+        if (experienceYears >= 2 && experienceYears <= 8) {
             return BigDecimal.valueOf(0.9);
-        } else if (totalExperience.compareTo(BigDecimal.valueOf(1)) >= 0) {
-            return BigDecimal.valueOf(0.7);
+        } else if (experienceYears > 8) {
+            return BigDecimal.valueOf(0.85); // Slightly lower for overqualified
         } else {
-            return BigDecimal.valueOf(0.4);
+            return BigDecimal.valueOf(0.6); // Lower for underqualified
         }
     }
 
     private ResumeAnalysisDTO.ResumeScoreDTO createDefaultScoring() {
-        ResumeAnalysisDTO.ScoringCriteriaDTO criteria = ResumeAnalysisDTO.ScoringCriteriaDTO.builder()
-                .requiredSkillsMatch(BigDecimal.valueOf(0.5))
-                .experienceLevelMatch(BigDecimal.valueOf(0.5))
-                .industryRelevance(BigDecimal.valueOf(0.5))
-                .educationLevelMatch(BigDecimal.valueOf(0.5))
-                .build();
-        
         return ResumeAnalysisDTO.ResumeScoreDTO.builder()
-                .overallScore(50)
-                .jobMatchScore(50)
-                .experienceScore(50)
-                .skillsMatchScore(50)
-                .scoringCriteria(criteria)
+                .overallScore(60)
+                .jobMatchScore(60)
+                .experienceScore(60)
+                .skillsMatchScore(60)
+                .scoringCriteria(ResumeAnalysisDTO.ScoringCriteriaDTO.builder()
+                        .requiredSkillsMatch(BigDecimal.valueOf(0.6))
+                        .experienceLevelMatch(BigDecimal.valueOf(0.6))
+                        .industryRelevance(BigDecimal.valueOf(0.6))
+                        .educationLevelMatch(BigDecimal.valueOf(0.6))
+                        .build())
                 .build();
     }
 
     private ResumeAnalysisDTO createErrorAnalysis(String errorMessage) {
-        ResumeAnalysisDTO.AnalysisMetadataDTO metadata = ResumeAnalysisDTO.AnalysisMetadataDTO.builder()
-                .processedAt(LocalDateTime.now())
-                .aiModelUsed("free-analysis")
-                .confidenceScore(BigDecimal.ZERO)
-                .processingTimeMs(0L)
-                .processingNotes(Arrays.asList("Error during processing: " + errorMessage))
-                .build();
-        
         return ResumeAnalysisDTO.builder()
                 .totalExperienceYears(BigDecimal.ZERO)
                 .totalCompaniesWorked(0)
-                .currentCompany("Unknown")
-                .currentPosition("Unknown")
-                .skillsExtracted(Arrays.asList())
+                .currentCompany("Error")
+                .currentPosition("Error")
+                .skillsExtracted(Arrays.asList("Unable to extract"))
+                .education(new ArrayList<>())
+                .previousPositions(new ArrayList<>())
                 .resumeScore(createDefaultScoring())
-                .analysisMetadata(metadata)
+                .analysisMetadata(ResumeAnalysisDTO.AnalysisMetadataDTO.builder()
+                        .processedAt(LocalDateTime.now())
+                        .aiModelUsed("error")
+                        .confidenceScore(BigDecimal.ZERO)
+                        .processingTimeMs(0L)
+                        .processingNotes(Arrays.asList("Error: " + errorMessage))
+                        .build())
                 .build();
     }
 } 
